#12491 : CA --> alimentation manuelle compteur