@@ -492,7 +492,7 @@ public class OeELECSaisieCompteurA48 extends BasicProcess {
 		CompteurDto compteurDto = new CompteurDto();
 		compteurDto.setIdAgent(agCompteur.getIdAgent());
 		compteurDto.setIdMotifCompteur(motif.getIdMotifCompteur());
-		compteurDto.setDureeAAjouter(Integer.valueOf(getVAL_ST_NB_JOURS()));
+		compteurDto.setDureeAAjouter(new Double(Integer.valueOf(getVAL_ST_NB_JOURS())));
 		compteurDto.setDateDebut(new DateTime(annee, 1, 1, 0, 0, 0).toDate());
 		compteurDto.setDateFin(new DateTime(annee, 12, 31, 23, 59, 0).toDate());
 
